app/appgw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-all-traffic-to-istio
  namespace: istio-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-port: "15021"
    appgw.ingress.kubernetes.io/health-probe-path: "/healthz/ready"
spec:
  rules:
  - http:
      paths:
      - path: "/*"
        backend:
          service:
            name: istio-gateway-agic
            port:
              number: 80
        pathType: Prefix
